--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head lang="no">
+    <head lang="nb-no">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="title" content="Åsane Musikklag 110 års jubileumskonsert"/>
+        <meta name="description" content="14. juni 2014, Grieghallen"/>
+        <meta property="og:image" content="http://www.aasanemusikklag.no/110/splash.jpg"/>
+        <meta name=”twitter:image” content=”http://www.aasanemusikklag.no/110/splash.jpg”>
+        <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
         <title>Åsane Musikklag 110 år • Jubileumskonsert 14. juni 2014</title>
         <script src="main.js"></script>
         <link href="main.css" rel="stylesheet">
@@ -11,7 +16,7 @@
         <div>
             <nav>
                 <h1>
-                    <a href="http://www.aasanemusikklag.no"><img src="logo-header.png"></a>
+                    <a href="http://www.aasanemusikklag.no"><img src="logo-header.png" alt="Åsane Musikklag"></a>
                 </h1>
                 <ol>
                     <li>
