--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nb-no">
     <head lang="nb-no">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
